--- a/backend/services/user-management/Dockerfile
+++ b/backend/services/user-management/Dockerfile
@@ -4,8 +4,6 @@ FROM python:3.10-slim
 # Set working directory inside the container
 WORKDIR /app
 
-COPY serviceKey.json /app/serviceKey.json
-
 # Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
@@ -13,6 +11,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+# Set the PORT environment variable
+ENV PORT=8081
+
 # Expose port and run the service
-EXPOSE 8081
+EXPOSE $PORT
 CMD ["python", "app.py"]
