--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build and push Docker image
         run: |
           cd backend/services/${{ matrix.service }}
-          gcloud builds submit --tag gcr.io/grassroots-football-management/microservice-${{ matrix.service }} --no-stream
+          gcloud builds submit --tag gcr.io/grassroots-football-management/microservice-${{ matrix.service }} 
 
       - name: Deploy to Cloud Run
         run: |
