--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: ['authentication', 'user-management', 'team-management', 'schedule-management', 'player_ratings']
+        service: ['authentication', 'user-management', 'team-management', 'schedule-management', 'player-ratings']
 
     steps:
       - name: Checkout code
