--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -11,6 +11,7 @@ jobs:
     strategy:
       matrix:
         service: ['authentication', 'user-management', 'team-management', 'schedule-management', 'player-ratings', 'match-ratings', 'carpool', 'payments']
+      max-parallel: 4
 
     steps:
       - name: Checkout code
@@ -28,6 +29,9 @@ jobs:
         run: |
           cd backend/services/${{ matrix.service }}
           gcloud builds submit --tag gcr.io/grassroots-football-management/microservice-${{ matrix.service }} 
+
+          echo "Sleeping for 10 seconds before the next build..."
+          sleep 10
 
       - name: Deploy to Cloud Run
         run: |
